# VValkMan

./: .env.example  .gitignore  20260111.md  Dockerfile  LICENSE  MyAsyncioThrottler.py  README.md  asynciodemo1.py  benchmarkdemo1.py  commit_emoji.md  decoratordemo1.py  decoratordemo2.py  deepseekdemo1.py  demo20260113.py  docker-compose copy.yml  docker-compose-mul-ins.yml  docker-compose.yml  fastapi_demo.py  fastapi_demo2.py  generatordemo.py  genericdemo1.py  genericdemo2.py  iteraterdemo1.py  langfusedemo.py  main.py  ollamademo1.py  ollamademo2.py  ollamademo3.py  person.py  pyproject.toml  test.db  test_walrus_operator.py  thread_demo.py  vector_init.md  yielddemo1.py
cosmos-s1/backend/: main.py  pyproject.toml
cosmos-s1/backend/deploy/: docker-compose.yml
cosmos-s1/frontend/: .gitignore
cosmos-s1/frontend/src/: App.tsx
deploy/k8s/: deployment.yaml
docs/concepts/: api_styles.md  google_products.md
docs/excaildraw/: python_asyncio.excalidraw
docs/memo/: fine_tuning.md  karpathy.md
init-db/: setup.sql
src/: langgraph_demo.py  rag_demo.py
src/service/: api.py
src/test/: conftest.py  test_deepseek.py  test_gemini.py  test_google.py
src/tools/: __init__.py  config.py  llm.py
test/: conftest.py  test_deepseek.py  test_google.py
