[project]
name = "vvalkman"
version = "0.1.0"
description = "Open Round chat model demo"
requires-python = ">=3.12"

dependencies = [
    "requests",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-google-genai>=2.1.12",
    "openai",
    "google>=3.0.0",
    "google-genai>=1.52.0",
    "pytest",
    "python-dotenv",
    "pydantic>=2.11.7",
    "fastapi",
    "uvicorn",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true 



